<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorsplash"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logorozi" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rel1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round1">

        <TextView
            android:id="@+id/forgetpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:textSize="25dp"
            android:padding="20dp"
            android:textColor="@color/black"
            android:text="@string/forgetpass" />

       <TextView
           android:id="@+id/forgtext"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@id/forgetpass"
           android:layout_marginTop="5dp"
           android:text="@string/forgtext"

           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgtext"
            android:id="@+id/forgetmobile"
            android:paddingBottom="20dp"
            android:hint="@string/forgetmobile"
            android:layout_marginLeft="20dp"
            android:paddingLeft="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset"
            android:layout_below="@id/forgetmobile"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/round"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reset"
            android:layout_marginTop="20dp"
            android:text="@string/otp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            />
    </RelativeLayout>


</RelativeLayout>