<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorsplash"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logorozi" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rel1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="5dp"
        android:background="@drawable/round1">

        <TextView
            android:id="@+id/newpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:textSize="25dp"
            android:padding="20dp"
            android:textColor="@color/black"
            android:text="@string/newpass" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_new"
            android:layout_below="@id/newpass"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/createnew"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/new_pass"
    android:paddingLeft="8dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="20dp"
    android:layout_below="@id/create_new"
    android:hint="New Password"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_pass"
            android:hint="@string/cofirmpass"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/new_pass"/>
       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@id/confirm_pass"
           android:text="Update"
           android:textColor="@color/white"
           android:layout_marginLeft="70dp"
           android:layout_marginTop="30dp"
           android:layout_marginRight="70dp"
           android:background="@drawable/round"
           android:layout_marginBottom="30dp"
           />
    </RelativeLayout>


</RelativeLayout>